--- a/composer.json
+++ b/composer.json
@@ -3,4 +3,9 @@
         "linecorp/line-bot-sdk": "^2.3",
          "ext-ftp": "*"
     }
+    "require": {
+        "php": "^8.0",
+        "ext-mbstring": "*",
+        "ext-gd": "*"
+    }
 }
