--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
     "require": {
         "linecorp/line-bot-sdk": "^2.3",
-         "ext-ftp": "*",
-        "php": "^8.0",
-        "ext-mbstring": "*",
-        "ext-gd": "*"
+         "ext-ftp": "*"
     }
    
 }
