--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
     "require": {
-        "linecorp/line-bot-sdk": "^2.3",
-         "ext-ftp": "*"
+        "linecorp/line-bot-sdk": "^2.3"
     }
-   
 }
